# libthingy

./: .gitignore  CMakeLists.txt  LICENSE  conan.cmake  conanfile.py  helper.cpp  helper.h  library.h  libthingy.h  tests.cmake  thingiverseClient.cpp  thingiverseClient.h
entities/: Category.cpp  Category.h  Collection.cpp  File.cpp  File.h  Image.cpp  Image.h  Thing.cpp  Thing.h  User.cpp  User.h
impl/: apiClient.cpp  categories.cpp  collections.cpp  exception.cpp  helper.cpp  things.cpp  users.cpp
src/entities/: Category.cpp  Collection.cpp  File.cpp  Image.cpp  Thing.cpp  User.cpp
src/impl/: apiClient.cpp  categories.cpp  collections.cpp  exception.cpp  helper.cpp  things.cpp  users.cpp
tests/: testGetCategories.cpp  testGetCategoriesByThing.cpp  testGetCategory.cpp  testGetCollection.cpp  testGetCollections.cpp  testGetCollectionsByUser.cpp  testGetFeaturedThings.cpp  testGetFilesByThing.cpp  testGetImagesByThing.cpp  testGetLikesByUser.cpp  testGetThing.cpp  testGetThingAncestors.cpp  testGetThingDerivatives.cpp  testGetThings.cpp  testGetThingsByCategory.cpp  testGetThingsByCollection.cpp  testGetThingsByUser.cpp  testGetUser.cpp  testGetUsers.cpp
